QS-1185: Fix overflow

--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -96,7 +96,7 @@
 		.card-content-inner {
 			min-height: 50px;
 			padding: 0;
-			overflow-x: hidden;
+			overflow: hidden;
 
 			.discover-video {
 				width: 100%;
